--- a/static/style.css
+++ b/static/style.css
@@ -52,6 +52,9 @@ table.calendrier {
 
 
 table tr { margin: 0; padding: 0; }
-table td { margin: 0; padding: 0; border: 1px solid black; }
+table td { margin: 0; padding: 0; border: 1px solid #999; }
+table td.autremois { opacity: 0.4; }
+
+td div.numjour { line-height: 0px; position: relative; top: 1em; text-indent: 0.5em; font-size: 0.8em; color: rgba(0,0,0,0.8); }
 
 svg { display: block; height: 90px; width:100%; }
