--- a/static/style.css
+++ b/static/style.css
@@ -60,11 +60,94 @@ input.spinner {
 
 body { position: relative; }
 
+div.barre-outils {
+    margin: 20px auto;
+    user-select: none;
+    -moz-user-select: none;
+    -webkit-user-select: none;
+    -ms-user-select: none;
+}
+
+.bouton span {
+    font-size: 13px;
+    vertical-align: top;
+}
+
+@font-face {
+    font-family: Entypo;
+    src: url("entypo/entypo.eot");
+    src: url("entypo/entypo.eot#ie") format("embedded-opentype"),
+         url("entypo/entypo.woff") format("woff"),
+         url("entypo/entypo.ttf") format("truetype"),
+         url("entypo/entypo.svg") format("svg");
+}
+
+.bouton {
+    font-family: Entypo, sans-serif;
+    font-size: 30px;
+    display: inline-block;
+    background: #ddd;
+    box-shadow: 0 0 0 1px #bbb, inset 0 1px 0 0 rgba(255,255,255,0.6);
+    padding: 6px 10px;
+    margin: 0;
+    cursor: default;
+    font-weight: bold;
+    color: #555;
+    border-radius: 2px;
+    margin: 0 10px;
+    line-height: 15px;
+    float: left;
+}
+
+.selecteur-mois,
+.mois-precedent,
+.mois-suivant {
+    float: right;
+}
+
+.bouton:hover {
+    background: #cfcfcf;
+}
+
+.bouton:active,
+.bouton.actif:active { /* :o */
+    background: #eee;
+    color: #888;
+}
+
+.bouton.actif {
+    background: #cdf;
+    color: #379;
+}
+
+.selecteur-mois {
+    min-width: 120px;
+    text-align: right;
+}
+
+.mois-precedent {
+    border-top-right-radius:0;
+    border-bottom-right-radius:0;
+    margin-right: 0;
+}
+.mois-suivant {
+    margin-left: 0;
+    border-top-left-radius:0;
+    border-bottom-left-radius:0;
+}
+.container {
+    opacity: 0;
+    transition: opacity .1s ease-out;
+    position: relative;
+    padding: 0 5%;
+    margin: 0 auto;
+    max-width: 1000px;
+}
+
+
 table.calendrier,
 table.jours {
-    width: 95%;
-    max-width: 1000px;
-    padding: 0 5%;
+    width: 100%;
     margin: 0 auto;
     border-collapse: collapse;
     table-layout: fixed;
