--- a/static/style.css
+++ b/static/style.css
@@ -61,7 +61,6 @@ input.spinner {
 body { position: relative; }
 
 div.barre-outils {
-    line-height: 15px;
     margin: 20px auto;
     user-select: none;
     -moz-user-select: none;
@@ -69,16 +68,23 @@ div.barre-outils {
     -ms-user-select: none;
 }
 
-.bouton span{
-    font-family: Entypo, sans-serif;
-    line-height: 0;
-    font-size: 30px;
+.bouton {
+    padding: 0 10px;
+    text-align: center;
+    display: inline-block;
+    height: 30px;
+    line-height: 30px;
+    background: #ddd;
+    box-shadow: 0 0 0 1px #bbb, inset 0 1px 0 0 rgba(255,255,255,0.6);
+    font-size: 15px;
+    cursor: default;
+    font-weight: bold;
+    color: #555;
+    border-radius: 2px;
+    margin: 0 10px;
+    float: left;
 }
-.bouton span.date {
-    font-size: 13px;
-    vertical-align: top;
-    line-height: 1em;
-}
+
 
 @font-face {
     font-family: Entypo;
@@ -87,20 +93,6 @@ div.barre-outils {
          url("entypo/entypo.woff") format("woff"),
          url("entypo/entypo.ttf") format("truetype"),
          url("entypo/entypo.svg") format("svg");
-}
-
-.bouton {
-    display: inline-block;
-    background: #ddd;
-    box-shadow: 0 0 0 1px #bbb, inset 0 1px 0 0 rgba(255,255,255,0.6);
-    padding: 6px 10px;
-    margin: 0;
-    cursor: default;
-    font-weight: bold;
-    color: #555;
-    border-radius: 2px;
-    margin: 0 10px;
-    float: left;
 }
 
 .selecteur-mois,
@@ -116,12 +108,10 @@ div.barre-outils {
 .bouton:active,
 .bouton.actif:active { /* :o */
     background: #eee;
-    color: #888;
 }
 
 .bouton.actif {
-    background: #cdf;
-    color: #379;
+    background: white;
 }
 
 .selecteur-mois {
