--- a/static/style.css
+++ b/static/style.css
@@ -114,11 +114,6 @@ div.barre-outils {
     background: white;
 }
 
-.selecteur-mois {
-    min-width: 120px;
-    text-align: right;
-}
-
 .mois-precedent {
     border-top-right-radius:0;
     border-bottom-right-radius:0;
@@ -291,4 +286,34 @@ ul:hover > .utilisateur.actif:hover { background: #def; }
 
 .init ul.conges input{
     width: 60px;
+}
+
+.selecteur-mois {
+    min-width: 150px;
+    text-align: right;
+    position: relative;
+    z-index: 48309403280;
+}
+.menu {
+    background: #eee;
+    position: absolute;
+    width:100%;
+    top:0;
+    left:0;
+    margin:0;
+    padding:0;
+    box-shadow: 0 0 1px black;
+    border-radius: 2px;
+    display: block;
+    z-index: 48309403280;
+}
+
+.menu li {
+    list-style: none;
+    margin: 0;
+    padding: 0 5px;
+}
+.menu li:hover {
+    color: white;
+    background: #3ac;
 }
