fix selecteur de mois bloqué en 1985

--- a/static/style.css
+++ b/static/style.css
@@ -316,3 +316,11 @@ ul:hover > .utilisateur.actif:hover { background: #def; }
     color: white;
     background: #3ac;
 }
+
+input.incorrect {
+    background: #fcc;
+}
+
+.connexion {
+    text-align: center;
+}
