alignement du solde avec boutons de la barre d'outils

--- a/static/style.css
+++ b/static/style.css
@@ -66,6 +66,7 @@ div.barre-outils {
     -moz-user-select: none;
     -webkit-user-select: none;
     -ms-user-select: none;
+    line-height: 30px;
 }
 
 .bouton {
